# joinup-challenge

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  pyproject.toml
joinup/: celery.py  settings.py  urls.py
users/: models.py  serializers.py  tasks.py  tests.py  urls.py  urls_v1.py  urls_v2.py  views.py  views_v2.py
users/migrations/: 0001_initial.py
