[tool.poetry]
name = "joinup-challenge"
version = "0.1.0"
description = "Join Up Challenge"
authors = ["Gustavo Tempel <gtempel@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
